--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-bertopic==0.10.0
+pandas==1.3.5
+numpy==1.21.6
+tweepy==3.10.0
+nltk==3.7
+scikit-learn ==1.0.2
+wordcloud==1.5.0
+matplotlib==3.2.2
+bertopic==0.11.0
